--- a/package.json
+++ b/package.json
@@ -7,27 +7,32 @@
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
-    "lint": "eslint --ext .js,.vue src",
-    "format": "prettier --write \"src/**/*.{js,vue,ts,css,scss,html}\""
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "@vueuse/core": "^10.9.0",
-    "primeicons": "^6.0.1",
-    "primevue": "^3.49.1",
     "vue": "^3.4.38",
+    "primevue": "^3.49.1",
+    "primeicons": "^6.0.1",
+    "@vueuse/core": "^10.9.0",
+    "vue-router": "^4.3.0",
     "vue-i18n": "^9.9.1",
-    "vue-router": "^4.3.0"
+    "@vueuse/motion": "^2.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.3",
-    "autoprefixer": "^10.4.21",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-prettier": "^5.2.3",
-    "postcss": "^8.5.3",
-    "sass": "^1.71.1",
-    "tailwindcss": "^4.0.12",
+    "@vitest/coverage-v8": "^1.3.1",
+    "@vue/test-utils": "^2.4.4",
     "typescript": "^5.5.3",
     "vite": "^5.4.2",
-    "vue-tsc": "^2.1.4"
+    "vue-tsc": "^2.1.4",
+    "sass": "^1.71.1",
+    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.35",
+    "autoprefixer": "^10.4.17",
+    "@tailwindcss/forms": "^0.5.7",
+    "vitest": "^1.3.1",
+    "jsdom": "^24.0.0",
+    "happy-dom": "^13.3.8"
   }
 }
