--- a/package.json
+++ b/package.json
@@ -8,31 +8,37 @@
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
     "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "lint": "eslint --ext .js,.ts,.vue src",
+    "format": "prettier --write \"src/**/*.{js,ts,vue,css,scss,html}\""
   },
   "dependencies": {
-    "vue": "^3.4.38",
-    "primevue": "^3.49.1",
-    "primeicons": "^6.0.1",
-    "@vueuse/core": "^10.9.0",
-    "vue-router": "^4.3.0",
-    "vue-i18n": "^9.9.1",
-    "@vueuse/motion": "^2.1.0"
+    "@vueuse/core": "10.9.0",
+    "@vueuse/motion": "^2.1.0",
+    "primeicons": "6.0.1",
+    "primevue": "3.49.1",
+    "vue": "3.4.38",
+    "vue-i18n": "^9.14.3",
+    "vue-router": "4.3.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.1.3",
-    "@vitest/coverage-v8": "^1.3.1",
-    "@vue/test-utils": "^2.4.4",
-    "typescript": "^5.5.3",
-    "vite": "^5.4.2",
-    "vue-tsc": "^2.1.4",
-    "sass": "^1.71.1",
-    "tailwindcss": "^3.4.1",
-    "postcss": "^8.4.35",
-    "autoprefixer": "^10.4.17",
-    "@tailwindcss/forms": "^0.5.7",
-    "vitest": "^1.3.1",
-    "jsdom": "^24.0.0",
-    "happy-dom": "^13.3.8"
+    "@tailwindcss/forms": "0.5.7",
+    "@vitejs/plugin-vue": "5.1.3",
+    "@vitest/coverage-v8": "^1.6.1",
+    "@vue/test-utils": "2.4.4",
+    "autoprefixer": "10.4.17",
+    "eslint": "8.34.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "happy-dom": "^17.4.4",
+    "jsdom": "24.0.0",
+    "postcss": "8.4.35",
+    "prettier": "2.8.4",
+    "sass": "1.71.1",
+    "tailwindcss": "3.4.1",
+    "typescript": "5.5.3",
+    "vite": "^5.4.14",
+    "vitest": "1.3.1",
+    "vue-tsc": "2.1.4"
   }
 }
