--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "0.5.7",
-    "@vitejs/plugin-vue": "5.1.3",
+    "@vitejs/plugin-vue": "^5.2.1",
     "@vitest/coverage-v8": "^1.6.1",
     "@vue/test-utils": "2.4.4",
     "autoprefixer": "10.4.17",
@@ -37,8 +37,8 @@
     "sass": "1.71.1",
     "tailwindcss": "3.4.1",
     "typescript": "5.5.3",
-    "vite": "^5.4.14",
-    "vitest": "1.3.1",
+    "vite": "^6.2.1",
+    "vitest": "^1.6.1",
     "vue-tsc": "2.1.4"
   }
 }
