--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "tailwindcss": "3.4.1",
     "typescript": "5.5.3",
     "vite": "^6.2.1",
+    "vite-plugin-imagemin": "^0.6.1",
     "vitest": "^1.6.1",
     "vue-tsc": "2.1.4"
   }
