--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write \"src/**/*.{js,ts,vue,css,scss,html}\""
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.3",
     "@vueuse/core": "10.9.0",
     "@vueuse/motion": "^2.1.0",
     "primeicons": "6.0.1",
@@ -23,10 +24,10 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "0.5.7",
+    "@tailwindcss/postcss": "^4.1.3",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitest/coverage-v8": "^1.6.1",
     "@vue/test-utils": "2.4.4",
-    "autoprefixer": "10.4.17",
     "eslint": "9.24.0",
     "eslint-config-prettier": "10.1.2",
     "eslint-plugin-prettier": "5.2.6",
@@ -35,7 +36,7 @@
     "postcss": "8.4.35",
     "prettier": "3.5.3",
     "sass": "1.71.1",
-    "tailwindcss": "3.4.1",
+    "tailwindcss": "^4.1.3",
     "typescript": "5.5.3",
     "vite": "^6.2.1",
     "vite-plugin-imagemin": "^0.6.1",
