--- a/package.json
+++ b/package.json
@@ -35,10 +35,11 @@
     "postcss": "8.5.3",
     "prettier": "3.5.3",
     "sass": "1.86.3",
+    "sharp": "^0.34.1",
     "tailwindcss": "^4.1.3",
     "typescript": "5.8.3",
     "vite": "^6.2.6",
-    "vite-plugin-imagemin": "^0.6.1",
+    "vite-plugin-image-presets": "^0.3.4",
     "vitest": "^3.1.1",
     "vue-tsc": "2.2.8"
   }
