--- a/package.json
+++ b/package.json
@@ -24,23 +24,23 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "0.5.10",
-    "@tailwindcss/postcss": "^4.1.3",
-    "@vitejs/plugin-vue": "^5.2.3",
+    "@tailwindcss/postcss": "4.1.3",
+    "@vitejs/plugin-vue": "5.2.3",
     "@vue/test-utils": "2.4.6",
     "eslint": "9.24.0",
     "eslint-config-prettier": "10.1.2",
     "eslint-plugin-prettier": "5.2.6",
-    "happy-dom": "^17.4.4",
+    "happy-dom": "17.4.4",
     "jsdom": "26.1.0",
     "postcss": "8.5.3",
     "prettier": "3.5.3",
     "sass": "1.86.3",
-    "sharp": "^0.34.1",
-    "tailwindcss": "^4.1.3",
+    "sharp": "0.34.1",
+    "tailwindcss": "4.1.3",
     "typescript": "5.8.3",
-    "vite": "^6.2.6",
-    "vite-plugin-image-presets": "^0.3.4",
-    "vitest": "^3.1.1",
+    "vite": "6.2.6",
+    "vite-plugin-image-presets": "0.3.4",
+    "vitest": "3.1.1",
     "vue-tsc": "2.2.8"
   }
 }
