--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "format": "prettier --write \"src/**/*.{js,ts,vue,css,scss,html}\""
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.3",
+    "@tailwindcss/vite": "4.1.3",
     "@vueuse/core": "13.1.0",
     "@vueuse/motion": "^3.0.3",
+    "gsap": "3.12.7",
     "primeicons": "6.0.1",
     "primevue": "3.49.1",
     "vue": "3.5.13",
-    "vue-i18n": "^11.1.3",
+    "vue-i18n": "11.1.3",
     "vue-router": "4.5.0"
   },
   "devDependencies": {
